src/index.css
body {
  font-family: 'Roboto', Arial, sans-serif;
  margin: 0;
  padding: 0;
  font-size: 12pt;
  color: #111;
  overflow: scroll;
}

a, a:active, a:focus {
  outline: none;
  background-color: transparent;
}

.logo-wrapper {
  max-width: 1400px;
  margin: 16px auto 8px auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-end;
}

.logo-wrapper p {
  padding: 0;
  margin: 0;
}

.logo {
  width: auto;
  height: auto;
  margin: 0 48px;
}

.logo img {
  max-width: inherit;
  max-height: inherit;
}

.logo-foton {
  max-width: 220px;
  flex-grow: 2.3;
}

.logo-ftek {
  max-width: 90px;
  flex-grow: 1;
}

main {
  background-color: #f8f8f8;
  padding: 8px 30px;
  border-top: 1px solid #cecece ;
  border-bottom: 1px solid #cecece ;
}

main > *:not(.lightbox-wrapper) {
  max-width: 1400px;
  margin: auto;
}

.wrapper {
  display: grid;
  justify-content: center;
}

.wrapper a {
  text-decoration: none;
  color: inherit;
}

.wrapper-albums {
  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
  grid-gap: 20px 20px;
}

.wrapper-images {
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  grid-gap: 16px 16px;
}

.thumbnail {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.thumbnail img {
  width: 100%;
  height: auto;
  max-height: 300px;
  border-radius: 10px;
  border: 1px solid #cecece;
  cursor: pointer;
}

.album-meta {
  margin: 5px 0 0 10px;
}

.album-meta p {
  margin: 0;
}

.album-meta .name {
  font-size: 12pt;
  margin: 0;
  font-weight: normal;
}

.album-meta .date {
  font-size: 10pt;
}

.images-meta .name {
  font-size: 18pt;
  margin: 0;
  font-weight: normal;
}

.images-meta .date, .author {
  font-size: 10pt;
  margin: 0;
}

.images-meta .description {
  margin: 16px 0;
}

.back-button {
  margin-top: 10px !important;
}

.back-button a {
  padding: 10px;
  text-decoration: none;
  color: inherit;
  display: inline-block;
}

.back-button a:active {
  color: #0366d6;
}

footer {
  text-align: center;
}

footer div {
  margin: 10px 0;
}

footer a {
  text-decoration: none;
  color: inherit;
}

footer a:active, footer a:hover {
  color: #0366d6;
}

footer .logo-facebook {
  max-width: 32px;
  max-height: 32px;
}

/* LIGHTBOX STYLES */

.lightbox-wrapper {
  display: none;
  position: fixed;
  z-index: 999;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: #000;
}

.lightbox-main {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.lightbox-image {
  width: auto;
  height: auto;
  max-height: 90%;
}

.lightbox-button {
  color: #fff;
  font-size: 35px;
  font-weight: bold;
  cursor: pointer;
  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

.lightbox-button:active {
  color: #aaa;
}

.lightbox-arrow {
  padding: 30px;
}

.lightbox-head {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: stretch;
  position: absolute;
  top: 8px;
  right: 30px;
}

.lightbox-head * {
  padding: 5px;
}

.lightbox-head a {
  text-decoration: none;
  color: inherit;
}

.lightbox-viewfull {
  font-size: 25px;
}

.lightbox-close {
  margin-top: 1px;
}

@media screen and (max-width: 600px) {

  .thumbnail img {
    max-height: none;
    border: none;
  }

  .logo-wrapper {
    margin: 8px auto 8px auto;
  }

  .logo {
    margin: 0 30px;
  }

  .lightbox-main {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto 1fr;
    grid-template-areas: 
      "image image image image"
      ". arrowleft arrowright .";
    justify-items: center;
    align-items: center;
    height: 100%;
    padding-top: 70px;
    box-sizing: border-box;
  }

  .lightbox-image {
    grid-area: image;
    max-width: 100%;
    max-height: 100%;
  }

  .lightbox-arrow {
    padding: 20px 40px;
  }

  .lightbox-arrow-left {
    grid-area: arrowleft;
  }
  
  .lightbox-arrow-right {
    grid-area: arrowright;
  }
}

